# securities-tracker-backend

./: .env.example  .gitignore  README.md  SYMBOLS.yaml  helper.py  main.py  pyproject.toml  requirements.txt  server.py  wealthsimple_integration.py
src/config/: settings.py
src/integration/: wealthsimple_integration.py
src/route/: api.py  helper.py
src/service/: websocket_data.py
src/utils/: logger.py  transform.py
src/websocket/: socket.py
src/ws_api/: __init__.py  wealthsimple_api.py
